# dpll

./: CHANGELOG.md  LICENSE  README.md  dpll.cabal  test.cabal  test.cnf
app/: Main.hs  Parser.hs  Solver.hs
