cabal-version:      2.4
name:               test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             khanh.nguyen
maintainer:         khanh.nguyen@shopee.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable test
    main-is:
        Main.hs
    other-modules:
        Parser
        Solver
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0, parse-dimacs >= 1.3, array >= 0.4.0.1
    hs-source-dirs:   app
    default-language: Haskell2010
